# filter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fft23.cpp  kalman_extended.cpp  kalman_extended.h  kalman_unscented.cpp  kalman_unscented.h  model.h  text_utils.cpp  text_utils.h  todo.txt
converters/: aem_converter.cpp
core/: CMakeLists.txt
core/filter/kalman_extended/: kalman_extended.cpp  kalman_extended.h
core/filter/kalman_unscented/: kalman_unscented.cpp  kalman_unscented.h
core/input_filter/averaging_filter/: averaging_filter.cpp  averaging_filter.h
core/regularizer/boundary_projector/: boundary_projector.cpp  boundary_projector.h
core/updater/decay_updater/: decay_updater.cpp  decay_updater.h
example_models/airborne_em/EQUATOR/: EQUATOR.cpp  EQUATOR.h
example_models/airborne_em/EQUATOR_C/: EQUATOR_C.cpp  EQUATOR_C.h
examples/: CMakeLists.txt
examples/airborne_electromagnetics/: Italy_short.XYZ  Makefile  generate_data.cpp  main.cpp
examples/airborne_electromagnetics/aggregator/: EQUATOR_aggregator.cpp  EQUATOR_aggregator.h
examples/airborne_electromagnetics/data_loader/: EQUATOR_data_loader.cpp  EQUATOR_data_loader.h
examples/airborne_electromagnetics/model/EQUATOR/: EQUATOR.cpp  EQUATOR.h
examples/airborne_electromagnetics/model/EQUATOR_C/: EQUATOR_C.cpp  EQUATOR_C.h
examples/coil_model/: main.cpp
examples/coil_model/model/: coil_model.cpp  coil_model.h
examples/polynomial_model/: Makefile  main.cpp  pipeline
examples/polynomial_model/model/: polynomial_model.cpp  polynomial_model.h
filters/: kalman_filter.cpp
legacy/: coil_model.cpp  coil_model.h  fft23.h  math_utils.cpp  math_utils.h  test_model.h
legacy/filters/: kalman_filter.h  kalman_unscented.cpp  kalman_unscented.h
legacy/models/: aem_converter.h  model.cpp  model.h
legacy/processing/: combined.cpp  extended.cpp
legacy/tests/: 1_lay_nopol.var  1_lay_pol.XYZ  1_lay_pol.var  2_lay_nopol.var  4_lay_1.XYZ  extended_test.cpp  sensitivity.xyz  waveform.XYZ
legacy/tests/.ipynb_checkpoints/: sensitivity_plot-checkpoint.ipynb
models/: aem_model_raw.cpp  aem_model_raw.h
processing/: 10_ext_0_uns.XYZ  10_ext_3_uns.XYZ  combined  unscented.cpp
tests/: 1_lay_nopol.XYZ  2_lay_nopol.XYZ  raw_model_test.cpp  sensitivity.cpp  unscented_test.cpp
tests/.ipynb_checkpoints/: plot_results-checkpoint.ipynb
types/aggregator/: aggregator.h
types/data_loader/: data_loader.cpp  data_loader.h
types/filter/: probabilistic_filter.cpp  probabilistic_filter.h
types/input_filter/: input_filter.h
types/model/: model.h
types/reader/: reader.h
types/regularizer/: regularizer.h
types/updater/: updater.h
types/workspace/: filter_workspace.h
types/writer/: writer.h
utilities/: CMakeLists.txt
utilities/mathematics/: matrix.cpp  matrix.h
utilities/mathematics/fourier/: fft23.cpp  fft23.h
utilities/mathematics/matrix/: matrix.cpp  matrix.h
utilities/mathematics/special_functions/: special_functions.cpp  special_functions.h
utilities/mathematics/spline/: spline.cpp  spline.h
utilities/parsing/simple_parser/: simple_parser.cpp  simple_parser.h
